--- a/configs/openwebmath_mistral.yaml
+++ b/configs/openwebmath_mistral.yaml
@@ -33,13 +33,13 @@ train:
   save_interval: 500
 
   # Number of iterations between logging calls (type: int, default: 1)
-  log_interval: 1
+  log_interval: 5
 
   # Number of samples between optimizer steps across data-parallel ranks (type: int, default: 512)
-  global_batch_size: 1024
+  global_batch_size: 64
 
   # Number of samples per data-parallel rank (type: int, default: 4)
-  micro_batch_size: 4
+  micro_batch_size: 
 
   # How long to warm up the learning rate, as a fraction of the length of the dataset
   #   (type: float, default: 0.01)
